--- a/index.html
+++ b/index.html
@@ -2,156 +2,160 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Convite Interativo - Chá de Fralda</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Chá de Fralda 💜</title>
+
 <style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #f7f2ff, #ffffff);
-    min-height: 100vh;
-    overflow-x: hidden;
-  }
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #f7f2ff, #ffffff);
+  min-height: 100vh;
+  overflow-x: hidden;
+}
 
-  .cloud {
-    position: fixed;
-    font-size: 90px;
-    opacity: 0.15;
-    top: 15%;
-    left: -200px;
-    animation: cloudMove 60s linear infinite;
-  }
+/* NUVENS */
+.cloud {
+  position: fixed;
+  font-size: 90px;
+  opacity: 0.12;
+  top: 15%;
+  left: -200px;
+  animation: cloudMove 70s linear infinite;
+  pointer-events: none;
+}
 
-  .cloud.second {
-    top: 40%;
-    animation-delay: 30s;
-  }
+.cloud.second {
+  top: 45%;
+  animation-delay: 35s;
+}
 
-  @keyframes cloudMove {
-    from { left: -200px; }
-    to { left: 100%; }
-  }
+@keyframes cloudMove {
+  from { left: -200px; }
+  to { left: 110%; }
+}
 
-  .card {
-    background: #fff;
-    width: 380px;
-    margin: 60px auto;
-    border-radius: 24px;
-    padding: 28px;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.12);
-    animation: fadeIn 0.8s ease-out;
-    position: relative;
-  }
+/* CARD */
+.card {
+  background: #fff;
+  width: 90%;
+  max-width: 380px;
+  margin: 60px auto;
+  border-radius: 24px;
+  padding: 28px;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.12);
+  animation: cardIn 0.9s ease-out;
+  position: relative;
+}
 
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(20px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
+@keyframes cardIn {
+  from { opacity: 0; transform: scale(0.95) translateY(20px); }
+  to { opacity: 1; transform: scale(1) translateY(0); }
+}
 
-  .heart {
-    position: absolute;
-    top: 14px;
-    right: 18px;
-    font-size: 22px;
-    animation: pulse 1.5s infinite;
-  }
+/* CORAÇÃO */
+.heart {
+  position: absolute;
+  top: 14px;
+  right: 18px;
+  font-size: 22px;
+  animation: pulse 1.5s infinite;
+}
 
-  @keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.15); }
-    100% { transform: scale(1); }
-  }
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.15); }
+  100% { transform: scale(1); }
+}
 
-  h1 {
-    text-align: center;
-    color: #6b4eff;
-    margin-bottom: 6px;
-  }
+h1 {
+  text-align: center;
+  color: #6b4eff;
+  margin-bottom: 6px;
+}
 
-  .subtitle {
-    text-align: center;
-    color: #888;
-    margin-bottom: 20px;
-    font-size: 14px;
-  }
+.subtitle {
+  text-align: center;
+  color: #888;
+  margin-bottom: 20px;
+  font-size: 14px;
+}
 
-  input {
-    width: 100%;
-    padding: 12px;
-    border-radius: 12px;
-    border: 1px solid #ccc;
-    margin-bottom: 14px;
-    font-size: 15px;
-    box-sizing: border-box;
-  }
+input {
+  width: 100%;
+  padding: 12px;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+  margin-bottom: 14px;
+  font-size: 15px;
+  box-sizing: border-box;
+}
 
-  .btn {
-    width: 100%;
-    padding: 12px;
-    border-radius: 14px;
-    border: none;
-    background: linear-gradient(135deg, #7aa2ff, #e6a6ff);
-    color: #fff;
-    font-size: 15px;
-    cursor: pointer;
-    margin-bottom: 10px;
-  }
+.btn {
+  width: 100%;
+  padding: 13px;
+  border-radius: 14px;
+  border: none;
+  background: linear-gradient(135deg, #7aa2ff, #e6a6ff);
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
 
-  .modal {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.4);
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
-  }
+/* MODAIS */
+.modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.45);
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
 
-  .modal-content {
-    background: #fff;
-    width: 300px;
-    border-radius: 18px;
-    padding: 22px;
-    text-align: center;
-    position: relative;
-  }
+.modal-content {
+  background: #fff;
+  width: 90%;
+  max-width: 320px;
+  border-radius: 18px;
+  padding: 22px;
+  text-align: center;
+  position: relative;
+}
 
-  .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: #eee;
-    border-radius: 50%;
-    width: 28px;
-    height: 28px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    font-weight: bold;
-  }
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #eee;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-weight: bold;
+}
 
-  .option {
-    background: #f1f1f1;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 6px 0;
-    cursor: pointer;
-  }
+.option {
+  background: #f1f1f1;
+  padding: 12px;
+  border-radius: 10px;
+  margin: 8px 0;
+  cursor: pointer;
+}
 
-  .summary {
-    text-align: left;
-    font-size: 14px;
-  }
-
-  .fralda-contador {
-    font-size: 13px;
-    color: #555;
-    margin-top: 8px;
-  }
-
+.summary {
+  text-align: left;
+  font-size: 14px;
+}
 </style>
 </head>
+
 <body>
+
 <div class="cloud">☁️</div>
 <div class="cloud second">☁️</div>
 
@@ -159,20 +163,20 @@
   <div class="heart">💜</div>
   <h1>Chá de Fralda</h1>
   <div class="subtitle">Com muito carinho para o nosso bebê</div>
-  <input id="nome" placeholder="Digite seu nome" />
+
+  <input id="nome" placeholder="Digite seu nome">
 
   <button class="btn" onclick="abrirLocal()">📍 Local do evento</button>
   <button class="btn" onclick="abrirAcompanhante()">👥 Você levará alguém?</button>
   <button class="btn" onclick="abrirFralda()">🎁 O que você vai levar?</button>
   <button class="btn" onclick="confirmarPresenca()">⭐ Confirmar presença</button>
-
 </div>
 
 <!-- MODAL LOCAL -->
 <div class="modal" id="modalLocal">
   <div class="modal-content">
     <div class="close" onclick="fechar('modalLocal')">✕</div>
-    <p>📍 O local será informado em breve 💕</p>
+    <p>📍 Local será informado em breve 💕</p>
   </div>
 </div>
 
@@ -181,12 +185,8 @@
   <div class="modal-content">
     <div class="close" onclick="fechar('modalAcompanhante')">✕</div>
     <h3>Você levará alguém?</h3>
-    <div class="option" onclick="selecionarAcompanhante(true)">Sim, irei levar acompanhante</div>
-    <div class="option" onclick="selecionarAcompanhante(false)">Não, irei sozinha</div>
-    <div id="extraAcompanhante" style="display:none; margin-top:10px;">
-      <input id="infoAcompanhante" placeholder="Quantas pessoas e quem são?" />
-      <label style="font-size:13px;"><input type="checkbox" id="criancas" /> Algum acompanhante é criança</label>
-    </div>
+    <div class="option" onclick="selecionarAcompanhante('Sim')">Sim</div>
+    <div class="option" onclick="selecionarAcompanhante('Não')">Não</div>
   </div>
 </div>
 
@@ -198,97 +198,79 @@
     <div class="option" onclick="selecionarFralda('P')">Fralda P</div>
     <div class="option" onclick="selecionarFralda('M')">Fralda M</div>
     <div class="option" onclick="selecionarFralda('G')">Fralda G</div>
-    <p><strong>+ mimo pra acompanhar!</strong></p>
-    <p style="font-size:13px">Um carinho extra que ajuda muito além das fraldas 💕<br>
-    Pode ser um lencinho, uma roupinha, algo pro banho ou outro cuidado fofo.</p>
-    <div class="fralda-contador" id="contadorFraldas"></div>
   </div>
 </div>
 
 <!-- MODAL RESUMO -->
 <div class="modal" id="modalResumo">
   <div class="modal-content">
-    <h3>Resumo da confirmação</h3>
+    <h3>Resumo</h3>
     <div class="summary" id="resumo"></div>
     <button class="btn" onclick="finalizar()">✨ Tudo certo</button>
   </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-<audio id="som"><source src="https://cdn.pixabay.com/audio/2022/03/15/audio_9c86e1b98c.mp3"></audio>
+<audio id="som">
+  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_9c86e1b98c.mp3">
+</audio>
 
 <script>
-  let fralda = '';
-  let acompanhante = '';
-  let fraldasCount = { P:0, M:0, G:0 };
+let fralda = '';
+let acompanhante = '';
 
-  // Exemplo de contagem inicial — você pode atualizar conforme planilha
-  fraldasCount = { P: 3, M: 8, G: 8 }; 
+const SHEET_URL = "https://script.google.com/macros/library/d/1AL9hh8a3a0iLgPr85v_Qa747EM_-8eArDRCF5qJviowKkE5oHwNYGQSF/5";
 
-  function abrirLocal(){ document.getElementById('modalLocal').style.display='flex'; }
-  function abrirAcompanhante(){ document.getElementById('modalAcompanhante').style.display='flex'; }
-  function abrirFralda(){ 
-    document.getElementById('modalFralda').style.display='flex'; 
-    atualizarContador();
-  }
-  function fechar(id){ document.getElementById(id).style.display='none'; }
+function abrirLocal(){ document.getElementById('modalLocal').style.display='flex'; }
+function abrirAcompanhante(){ document.getElementById('modalAcompanhante').style.display='flex'; }
+function abrirFralda(){ document.getElementById('modalFralda').style.display='flex'; }
+function fechar(id){ document.getElementById(id).style.display='none'; }
 
-  function selecionarAcompanhante(sim){
-    acompanhante = sim ? 'Sim' : 'Não';
-    document.getElementById('extraAcompanhante').style.display = sim ? 'block' : 'none';
-  }
+function selecionarAcompanhante(v){
+  acompanhante = v;
+  fechar('modalAcompanhante');
+}
 
-  function selecionarFralda(f){
-    fralda = f;
-    fraldasCount[f]++; // Atualiza contagem local
-    fechar('modalFralda');
-  }
+function selecionarFralda(v){
+  fralda = v;
+  fechar('modalFralda');
+}
 
-  function atualizarContador(){
-    const contador = document.getElementById('contadorFraldas');
-    let sugestao = Object.keys(fraldasCount).reduce((a,b) => fraldasCount[a]<fraldasCount[b]?a:b);
-    contador.innerHTML = `Contagem atual: P(${fraldasCount.P}), M(${fraldasCount.M}), G(${fraldasCount.G})<br>
-    Sugestão: levar fralda ${sugestao} 💡`;
+function confirmarPresenca(){
+  const nome = document.getElementById('nome').value.trim();
+  if(!nome || !fralda || !acompanhante){
+    alert("Preencha tudo antes 😊");
+    return;
   }
 
-  function confirmarPresenca(){
-    const nome = document.getElementById('nome').value;
-    if(!nome || !fralda || !acompanhante){ alert('Preencha tudo antes 😊'); return; }
-    document.getElementById('resumo').innerHTML = `
-      <p><strong>Nome:</strong> ${nome}</p>
-      <p><strong>Fralda:</strong> ${fralda}</p>
-      <p><strong>Acompanhante:</strong> ${acompanhante}</p>`;
-    document.getElementById('modalResumo').style.display='flex';
-  }
+  document.getElementById('resumo').innerHTML = `
+    <p><strong>Nome:</strong> ${nome}</p>
+    <p><strong>Fralda:</strong> ${fralda}</p>
+    <p><strong>Acompanhante:</strong> ${acompanhante}</p>
+  `;
+  document.getElementById('modalResumo').style.display='flex';
+}
 
-  const SHEET_URL = "COLE_AQUI_SEU_SCRIPT_URL";
+function finalizar(){
+  const nome = document.getElementById('nome').value;
 
-  function finalizar(){
-    const nome = document.getElementById('nome').value;
-    const infoAcompanhante = document.getElementById('infoAcompanhante')?.value || '';
-    const temCrianca = document.getElementById('criancas')?.checked || false;
-
-    fetch(SHEET_URL, {
-      method: 'POST',
-      body: JSON.stringify({
-        nome: nome,
-        fralda: fralda,
-        acompanhante: acompanhante,
-        infoAcompanhante: infoAcompanhante,
-        temCrianca: temCrianca,
-        fraldaEscolhida: fralda
-      })
+  fetch(SHEET_URL, {
+    method: 'POST',
+    body: JSON.stringify({
+      nome: nome,
+      fralda: fralda,
+      acompanhante: acompanhante
     })
-    .then(() => {
-      document.getElementById('som').play();
-      confetti();
-      alert('Presença confirmada com sucesso! 💜');
-      document.getElementById('modalResumo').style.display='none';
-    })
-    .catch(() => {
-      alert('Erro ao enviar confirmação 😢');
-    });
-  }
+  }).then(() => {
+    document.getElementById('som').play();
+    confetti();
+    alert("Presença confirmada 💜");
+    document.getElementById('modalResumo').style.display='none';
+  }).catch(() => {
+    alert("Erro ao enviar 😢");
+  });
+}
 </script>
+
 </body>
 </html>
