--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body{
   margin:0;
   font-family:Arial,sans-serif;
-  background:linear-gradient(135deg,#f7f2ff,#ffffff);
+  background:linear-gradient(135deg,#FAF7F3,#FFFFFF);
   min-height:100vh;
   overflow-x:hidden;
 }
@@ -18,7 +18,7 @@ body{
 .cloud{
   position:fixed;
   font-size:80px;
-  opacity:.15;
+  opacity:.12;
   top:10%;
   left:-200px;
   animation:cloudMove 60s linear infinite;
@@ -41,7 +41,7 @@ body{
   background:#fff;
   width:90%;
   max-width:380px;
-  margin:60px auto;
+  margin:80px auto 60px;
   border-radius:24px;
   padding:28px;
   box-shadow:0 20px 40px rgba(0,0,0,.12);
@@ -50,6 +50,27 @@ body{
 @keyframes fade{
   from{opacity:0;transform:translateY(15px);}
   to{opacity:1;transform:none;}
+}
+
+/* URSINHO TOPO */
+.bear{
+  width:140px;
+  height:140px;
+  margin:-100px auto 10px;
+  background:#000;
+  border-radius:50%;
+  overflow:hidden;
+  box-shadow:0 15px 30px rgba(0,0,0,.25);
+  animation:bearFloat 3s ease-in-out infinite;
+}
+  
+  .bear img{
+    width:100%;
+    height:100%
+    object-fit:cover;
+}
+@keyframes bearFloat{
+  50%{transform:translateY(-6px);}
 }
 
 .heart{
@@ -63,11 +84,11 @@ body{
   50%{transform:scale(1.15);}
 }
 
-h1{text-align:center;color:#6b4eff;margin-bottom:6px;}
+h1{text-align:center;color:#9C7A4F;margin-bottom:6px;}
 .date{
   text-align:center;
   font-size:14px;
-  color:#6b4eff;
+  color:#9C7A4F;
   margin-bottom:6px;
 }
 .countdown{
@@ -93,16 +114,39 @@ input{
   font-size:15px;
 }
 
+/* BOTÕES COM MICRO ANIMAÇÃO */
 .btn{
   width:100%;
   padding:13px;
   border-radius:14px;
   border:none;
-  background:linear-gradient(135deg,#7aa2ff,#e6a6ff);
+  background:linear-gradient(135deg,#D4AF6A,#9C7A4F);
   color:#fff;
   font-size:15px;
   cursor:pointer;
   margin-bottom:10px;
+  position:relative;
+  overflow:hidden;
+}
+
+.btn::after{
+  content:"";
+  position:absolute;
+  top:0;
+  left:-100%;
+  width:100%;
+  height:100%;
+  background:linear-gradient(120deg,transparent,rgba(255,255,255,.4),transparent);
+}
+
+.btn:hover::after,
+.btn:active::after{
+  animation:shine .8s ease;
+}
+
+@keyframes shine{
+  from{left:-100%;}
+  to{left:100%;}
 }
 
 /* MODAIS */
@@ -143,15 +187,15 @@ input{
 }
 
 .option{
-  background:#f1f1f1;
+  background:#F3EADB;
   padding:12px;
   border-radius:10px;
   margin:8px 0;
   cursor:pointer;
 }
 .option.selected{
-  background:#e8e2ff;
-  border:2px solid #6b4eff;
+  background:#EAD8B6;
+  border:2px solid #C2A27A;
 }
 
 .map{
@@ -170,7 +214,11 @@ input{
 <div class="cloud second">☁️</div>
 
 <div class="card">
-  <div class="heart">💜</div>
+  <div class="bear">
+    <img src="ursinho.png" alt="Ursinho Chá de Fralda">
+  </div>
+  <div class="heart">🤎</div>
+
   <h1>Chá de Fralda</h1>
   <div class="date">🗓️ 08/02 • ⏰ 09:00</div>
   <div class="countdown" id="countdown"></div>
@@ -191,8 +239,7 @@ input{
     <h3>📍 Local do evento</h3>
     <div class="map">
       <iframe width="100%" height="150" style="border:0"
-        src="https://www.google.com/maps?q=Rua%20Am%C3%A9rico%20Evaristo%20100%20Diadema&output=embed">
-      </iframe>
+        src="https://www.google.com/maps?q=Rua%20Am%C3%A9rico%20Evaristo%20100%20Diadema&output=embed"></iframe>
     </div>
     <p>Rua Américo Evaristo, 100 - Diadema</p>
     <a class="btn" target="_blank"
@@ -210,8 +257,8 @@ input{
 
     <p style="margin-top:14px;font-size:14px;">
       <strong>Um carinho extra além das fraldas</strong><br>
-      Pode ser uma roupinha, lenço umedecido, algum item pra banho ou outra coisinha que vier do coração.<br>
-      💜 <em>Mas lembre-se: a sua presença é o nosso maior presente!</em>
+      Pode ser uma roupinha, lenço umedecido, item de banho ou algo especial 🤎<br>
+      <em>Sua presença é o nosso maior presente.</em>
     </p>
   </div>
 </div>
@@ -244,7 +291,6 @@ input{
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <script>
-/* 🔴 COLE A URL DO SEU GOOGLE APPS SCRIPT AQUI */
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby-X8nytInmrH9Qyr3WJpWZfAIyD685KAhOwPkvhzVFyGNr7uBUEJ9XLw5WNmf2ajeeCg/exec";
 
 let fralda="", acompanhantes=[];
@@ -284,7 +330,7 @@ function confirmar(){
   resumo.innerHTML=`
     <p><b>Nome:</b> ${nome}</p>
     <p><b>Fralda:</b> ${fralda}</p>
-    <p style="color:#6b4eff;">💜 Estamos ansiosos para sua presença!</p>`;
+    <p style="color:#9C7A4F;">🧸 Estamos ansiosos pela sua presença!</p>`;
   abrir('resumoModal');
 }
 
@@ -295,14 +341,8 @@ function finalizar(){
     acompanhantes:acompanhantes.join(" | "),
     data:new Date().toLocaleString()
   };
-
-  fetch(SCRIPT_URL,{
-    method:"POST",
-    body:JSON.stringify(dados)
-  });
-
+  fetch(SCRIPT_URL,{method:"POST",body:JSON.stringify(dados)});
   confetti();
-  if(navigator.vibrate)navigator.vibrate(120);
   fechar('resumoModal');
 }
 
@@ -313,7 +353,7 @@ setInterval(()=>{
     const dias=Math.floor(d/86400000);
     const hrs=Math.floor(d/3600000)%24;
     const min=Math.floor(d/60000)%60;
-    countdown.innerText=`Faltam ${dias} dias, ${hrs}h e ${min}min 💜`;
+    countdown.innerText=`Faltam ${dias} dias, ${hrs}h e ${min}min 🤎`;
   }
 },1000);
 </script>
